syntax = "proto3";

package opendut.model.viper;

import "opendut/model/viper/run.proto";


message ViperRunDeployment {
  opendut.model.viper.ViperRunId id = 1;
  //TODO maybe introduce ID for each run
}
