syntax = "proto3";

package opendut.model.viper;

import "opendut/model/util/net.proto";
import "opendut/model/util/uuid.proto";


message ViperSourceDescriptor {
  ViperSourceId id = 1;
  ViperSourceName name = 2;
  opendut.model.util.Url url = 3;
}

message ViperSourceId {
  opendut.model.util.Uuid uuid = 1;
}

message ViperSourceName {
  string value = 1;
}
